Fix filter display on mobile

--- a/titletowns/css/style.css
+++ b/titletowns/css/style.css
@@ -190,11 +190,11 @@ section.side {
   .footnotes ol, .footnotes p {
     font-size: .75rem; }
 
-.desktop {
+.nomobile {
   display: none !important; }
   @media screen and (min-width: 768px) {
-    .desktop {
-      display: inline-block !important; } }
+    .nomobile {
+      display: flex !important; } }
 
 .mobile {
   display: inline-block !important; }
